Increase heap for sql-tests module since no images in there