@@ -158,6 +158,8 @@ function wait_for_bigdata() {
 }
 
 function sqltest_build() {
+    # Can use more memory here since not loading any images
+    export JVM_OPTS="-Dquill.macro.log=false -Dquill.scala.version=$TRAVIS_SCALA_VERSION -Xms2g -Xmx5g -Xss5m -XX:ReservedCodeCacheSize=256m -XX:+TieredCompilation -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC"
     sbt -Dmodules=sqltest -Doracle=true $SBT_ARGS test
 }
 
